tests/transpiler/x/pl/python_auto.out
ERROR: /workspace/mochi/tests/transpiler/x/pl/python_auto.pl:1: Initialization goal raised exception:
ERROR: Arguments are not sufficiently instantiated
